deployment-template/eks/ingress.yaml
# Controller docs: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/deploy/installation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: data-prepper-alb
  labels:
    app: data-prepper
  annotations:
    # Annotation docs: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:xxxxx:certificate/xxxxxxx # Replace this
    alb.ingress.kubernetes.io/healthcheck-path: /grpc.health.v1.Health/Check
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":21890}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: '0'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: data-prepper-headless
              servicePort: 21890
